# liacs-coco-public

assignment_3/: README.md  meson_options.txt
assignment_3/docs/: MESON.md
assignment_3/src/general/src/main/cpp/: meson.build
assignment_3/src/general/src/main/public/: to_string.h
assignment_3/src/general/src/main/public/hacks/: template_hacks.h
assignment_3/src/intermediate-code/: meson.build
assignment_3/src/intermediate-code/src/main/cpp/intermediatecode/generator/: icgenerator.cpp
assignment_3/src/intermediate-code/src/main/cpp/intermediatecode/generator/visitor/: icvisitor.cpp
assignment_3/src/intermediate-code/src/main/cpp/intermediatecode/operator/: ioperator.cpp  ioperatortype.cpp
assignment_3/src/intermediate-code/src/main/cpp/util/: utility.cpp
assignment_3/src/intermediate-code/src/main/public/: intermediate.h  ioperand.h  istatement.h
assignment_3/src/intermediate-code/src/test/: meson.build
assignment_3/src/intermediate-code/src/test/c-minus/units/declarations/warn/: simple_global.c
assignment_3/src/intermediate-code/src/test/cpp/: main.cpp
assignment_3/src/intermediate-code/src/test/cpp/support/: ictestvisitor.h  testutil.h
assignment_3/src/intermediate-code/src/test/cpp/units/: api.cpp
assignment_3/src/lexical/: meson.build
assignment_3/src/lexical/src/main/: meson.build
assignment_3/src/lexical/src/main/cpp/: lexical.cpp
assignment_3/src/lexical/src/main/cpp/debug/: debug.cpp
assignment_3/src/lexical/src/main/cpp/entrypoint/: main.cpp
assignment_3/src/lexical/src/main/cpp/visitor/: basevisitor.cpp
assignment_3/src/lexical/src/main/flex_bison/: compiler.l
assignment_3/src/lexical/src/main/public/: lexical.h  nothingvisitor.h
assignment_3/src/lexical/src/test/cpp/support/: lexutil.h
assignment_3/src/machine-code/: meson.build
assignment_3/src/machine-code/src/main/: meson.build
assignment_3/src/machine-code/src/main/cpp/allocator/globals/: globalsallocator.h
assignment_3/src/machine-code/src/main/public/: codegenerator.h
assignment_3/src/machine-code/src/test/cpp/support/: fixture.h
assignment_3/src/syntax/: meson.build
assignment_3/src/syntax/src/main/cpp/builder/: frontendbuilder.cpp
assignment_3/src/syntax/src/main/cpp/entrypoint/: main.cpp
assignment_3/src/syntax/src/main/cpp/visitor/: syntaxvisitor.cpp
assignment_3/src/syntax/src/main/public/: frontendbuilder.h  syntax.h
assignment_3/src/syntaxutils/: meson.build
assignment_3/src/syntaxutils/src/main/: meson.build
assignment_3/src/syntaxutils/src/main/cpp/scope/: scope.cpp
assignment_3/src/syntaxutils/src/main/cpp/symbol/: symbol.cpp
assignment_3/src/syntaxutils/src/main/public/: decllist.h  symboltable.h
assignment_3/src/testutils/src/main/cpp/: dynamic_test.cpp
assignment_3/src/testutils/src/main/public/: dynamic_test.h
assignment_3/subprojects/: variant.wrap
assignment_3/subprojects/filesystem-1.5.4_vendored/: meson.build
assignment_3/subprojects/subprocess_vendored/: meson.build
assignment_4/: meson.build
assignment_4/docs/: DEBUG.md
assignment_4/src/: clang-apply.sh
assignment_4/src/general/: meson.build
assignment_4/src/general/src/main/cpp/logger/: logger.cpp
assignment_4/src/general/src/main/public/: logger.h
assignment_4/src/intermediate-code/src/main/: meson.build
assignment_4/src/intermediate-code/src/main/cpp/: intermediate.cpp
assignment_4/src/intermediate-code/src/main/cpp/entrypoint/: main.cpp
assignment_4/src/intermediate-code/src/main/cpp/flowgraph/: flowgraph.cpp
assignment_4/src/intermediate-code/src/main/cpp/intermediatecode/: intermediatecode.cpp
assignment_4/src/intermediate-code/src/main/cpp/intermediatecode/operator/: ioperator.cpp
assignment_4/src/intermediate-code/src/main/cpp/util/: utility.cpp
assignment_4/src/intermediate-code/src/main/public/: flowgraph.h  icgenerator.h  intermediatecode.h  ioperator.h  ioperatortype.h  utility.h
assignment_4/src/intermediate-code/src/test/cpp/support/: fixture.h
assignment_4/src/lexical/: .gitignore
assignment_4/src/lexical/src/main/cpp/debug/: debug.h
assignment_4/src/lexical/src/main/cpp/visitor/nothing/: nothingvisitor.cpp
assignment_4/src/lexical/src/main/flex_bison/: compiler.y
assignment_4/src/lexical/src/main/public/: basevisitor.h
assignment_4/src/lexical/src/test/: meson.build
assignment_4/src/lexical/src/test/cpp/: main.cpp
assignment_4/src/lexical/src/test/cpp/support/: fixture.h
assignment_4/src/machine-code/src/main/: meson.build
assignment_4/src/machine-code/src/main/cpp/: machinecode.cpp
assignment_4/src/machine-code/src/main/cpp/allocator/globals/: globalsallocator.cpp  globalsallocator.h
assignment_4/src/machine-code/src/main/cpp/codeemitter/: codeemitter.cpp  codeemitter.h
assignment_4/src/machine-code/src/main/cpp/codegenerator/: codegenerator.cpp
assignment_4/src/machine-code/src/main/cpp/entrypoint/: main.cpp
assignment_4/src/machine-code/src/main/cpp/register/: register.cpp  register.h
assignment_4/src/machine-code/src/main/public/: machinecode.h
assignment_4/src/machine-code/src/test/: meson.build
assignment_4/src/machine-code/src/test/cpp/: main.cpp
assignment_4/src/machine-code/src/test/cpp/support/: machinecodeutil.h
assignment_4/src/syntax/src/main/: meson.build
assignment_4/src/syntax/src/main/cpp/: syntax.cpp
assignment_4/src/syntax/src/main/cpp/visitor/: syntaxvisitor.h
assignment_4/src/syntaxutils/src/main/cpp/node/: node.cpp
assignment_4/src/syntaxutils/src/main/cpp/symbol/table/: symboltable.cpp
assignment_4/src/syntaxutils/src/main/cpp/syntaxtree/: syntaxtree.cpp
assignment_4/src/syntaxutils/src/main/cpp/types/: types.cpp
assignment_4/src/syntaxutils/src/main/public/: listtree.h  node.h  scope.h  symbol.h  syntaxtree.h  types.h
assignment_4/src/testutils/: meson.build
assignment_4/src/testutils/src/main/: meson.build
assignment_4/src/testutils/src/main/public/: test.h
assignment_4/subprojects/: subprocess.wrap
assignment_4/subprojects/subprocess_vendored/src/cpp/subprocess/: ProcessBuilder.cpp  shell_utils.cpp
(+3 files in other folders)
