libmachinecode_files += files (
    'cpp/machinecode.cpp',
    'cpp/allocator/globals/globalsallocator.cpp',
    'cpp/allocator/registers/registerallocator.cpp',
    'cpp/allocator/registers/interferencegraph.cpp',
    'cpp/allocator/stack/stackallocator.cpp',
    'cpp/callanalyzer/callanalyzer.cpp',
    'cpp/codeemitter/codeemitter.cpp',
    'cpp/codegenerator/codegenerator.cpp',
    'cpp/lifetime/lifetime.cpp',
    'cpp/register/register.cpp',
    'cpp/subprogram/generator/subproggenerator.cpp')