libintermediatecode_files += files (
    'cpp/intermediatecode/generator/visitor/icvisitor.cpp',
    'cpp/intermediatecode/generator/icgenerator.cpp',
    'cpp/intermediatecode/operator/ioperator.cpp',
    'cpp/intermediatecode/operator/ioperatortype.cpp',
    'cpp/intermediatecode/intermediatecode.cpp',
    'cpp/flowgraph/flowgraph.cpp',
    'cpp/util/utility.cpp',
    'cpp/intermediate.cpp')